# nibbler

./: .gitignore  Author  CMakeLists.txt  Makefile  README.md  author  install.sh
inc/: Bonus.hpp  Food.hpp  GameEngine.hpp  Snake.hpp  SnakePart.hpp
libs/inc/: ILibrary.hpp
libs/lib1-SFMLv2/: CMakeLists.txt  Makefile
libs/lib1-SFMLv2/inc/: SFMLv2.hpp
libs/lib1-SFMLv2/src/: SFMLv2.cpp
libs/lib1-opengl/: CMakeLists.txt  Makefile
libs/lib1-opengl/inc/: OpenGL.hpp
libs/lib1-opengl/src/: OpenGL.cpp
libs/lib2-sdl/: CMakeLists.txt  Makefile
libs/lib2-sdl/inc/: SDL.hpp
libs/lib2-sdl/src/: SDL.cpp
libs/lib3-sfml/: CMakeLists.txt  Makefile
libs/lib3-sfml/cmake_modules/: FindSFML.cmake
libs/lib3-sfml/inc/: SFML.hpp
libs/lib3-sfml/src/: SFML.cpp
src/: Bonus.cpp  Food.cpp  GameEngine.cpp  Snake.cpp  SnakePart.cpp  main.cpp
